hero alignment fixes

--- a/shared/css/cyph.com.scss
+++ b/shared/css/cyph.com.scss
@@ -127,10 +127,10 @@ html.mobile #new-cyph-section {
 .hero-text {
 	width: 100%;
 	text-align: center;
-	margin-top: 80px;
+	margin-top: 65px;
+	margin-bottom: 0px;
 	font-size: 42px;
 	font-weight: 100;
-	line-height: 12px;
 
 	.subtitle {
 		font-size: 50%;
@@ -139,42 +139,38 @@ html.mobile #new-cyph-section {
 }
 
 .feature-list-container {
-	margin-top: 70px;
+	margin: 25px 0px;
 
 	> .grid-parent.right {
 		text-align: right;
 	}
 
 	.feature-list-item {
-		margin-bottom: 50px;
+		position: relative;
+		height: 115px;
 
 		p.title {
-			/* line-height: 2.8vw; */
 			font-size: 16px;
 			font-family: 'Ubuntu';
 		}
 
-		p:not(.title) {
-			font-size: 95%;
-			line-height: 150%;
-		}
-
 		img {
-			/* box-shadow: 0px 4px 10px -1px rgba(0, 0, 0, 0.25); */
 			border-radius: 100% !important;
 			padding: 0px;
 		}
 
-		.oneline {
+		> * {
 			display: block;
-			width: 100%;
-			margin: 3px 10%;
+			position: relative;
+			top: 50%;
+			@include transform(translateY(-50%));
 		}
 	}
 
 	.screenshot {
 		display: block;
 		height: calc((50px + 5.525vw) * 3 - 50px);
+		margin-top: 25px;
 
 		&.laptop {
 			margin-left: calc(((50px + 5.525vw) * 3 - 50px) * -0.885);
